5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1670_2975.log
== TEST (2019-04-16 19:11:28) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")
valor_sucos = float(input("digite o valor do suco: "))
quantidade_salgados = input("digite a quantidade de salgados: ")
valor_salgado = float(input("digite o valor do salgado: "))
valort = float(input("digite o valor disponivel: "))
if valort>(quantidade_sucos*valor_sucos)+(quantidade_salgados*valor_salgados)
	print
-- ERROR:
File "XXXX", line 6
    if valort>(quantidade_sucos*valor_sucos)+(quantidade_salgados*valor_salgados)
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:14:07) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")
valor_sucos = float(input("digite o valor do suco: "))
quantidade_salgados = input("digite a quantidade de salgados: ")
valor_salgado = float(input("digite o valor do salgado: "))
valort = float(input("digite o valor disponivel: "))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_salgado = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:33) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")
valor_sucos = float(input("digite o valor do suco: "))
quantidade_salgados = input("digite a quantidade de salgados: ")
valor_salgado = float(input("digite o valor do salgado: "))
valort = float(input("digite o valor disponivel: "))
total = float(input("quantidade_sucos*valor_sucos)+(quantidade_salgados*valor salgados" ))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_salgado = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:23:06) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valort = float(input("digite o valor disponivel: "))
if (valort == quantidade_sucos + quantidade_salgados)
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
File "XXXX", line 6
    if (valort == quantidade_sucos + quantidade_salgados)
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:23:27) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valort = float(input("digite o valor disponivel: "))
if input(valort == quantidade_sucos + quantidade_salgados)
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
File "XXXX", line 6
    if input(valort == quantidade_sucos + quantidade_salgados)
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:24:27) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valort = float(input("digite o valor disponivel: "))
if "valort == quantidade_sucos + quantidade_salgados"
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
File "XXXX", line 6
    if "valort == quantidade_sucos + quantidade_salgados"
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:27:44) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valor==quantidade_sucos + quantidade_salgados)
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
File "XXXX", line 6
    if (valor==quantidade_sucos + quantidade_salgados)
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:36:34) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valort == valor)	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
File "XXXX", line 6
    if (valort == valor)	
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:37:04) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valort == valor):
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (valort == valor):
NameError: name 'valort' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:38:37) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valor < (quantidade_sucos + quantidade_salgados)):
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (valor < (quantidade_sucos + quantidade_salgados)):
TypeError: '<' not supported between instances of 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:40:36) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valor < 0):
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(nao)
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:42:03) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valor > 0):
	"quantidade_sucos + quantidade_salgados > valor"
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:45:05) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valor > 0):
	x = "quantidade_sucos + quantidade_salgados == valor"
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:46:23) 
-- CODE:
quantidade_sucos = input("digite a quantidade de sucos: ")

quantidade_salgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (valor > 0):

	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:49:17) 
-- CODE:
qsucos = input("digite a quantidade de sucos: ")

qsalgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (qsucos + qsalgados < valor):
	
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (qsucos + qsalgados < valor):
TypeError: '<' not supported between instances of 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:51:49) 
-- CODE:
qsucos = input("digite a quantidade de sucos: ")

qsalgados = input("digite a quantidade de salgados: ")

valor = float(input("digite o valor disponivel: "))
if (qsucos == qsalgados):
	
	
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(sim)
NameError: name 'sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:59:00) 
-- CODE:
qsucos = input("digite a quantidade de sucos: ")
preco_sucos = float(input("digite o valor do suco: "))
qsalgados = input("digite a quantidade de salgados: ")
preco_salgado = float(input("digite o valor do salgado: "))
valor = float(input("digite o valor disponivel: "))
x = (qsucos*preco_sucos+qsalgados*precosalgados<valor)
if (qsucos == qsalgados):
	x = 
	
	
	
	print(sim)
else:
	print(nao)
	
	
-- ERROR:
File "XXXX", line 8
    x = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
